# RAG-KnowledgeBase

./: .env.example  .gitignore  README.md  all_imports.txt  list_groq_models.py  main.py  memory.db  memory.db-shm  memory.db-wal  pyproject.toml  requirement.txt  test_fail.txt  test_fail_v2.txt  test_fail_v3.txt  test_fail_v4.txt  test_invoke.py  test_output.txt  test_raw_neo4j.py
.github/: description.md
Src/: container.py
Src/Agents/: Agent_state.py  Graph_builder.py  chat_bot_node.py  intent_detector_node.py  query_corrector_node.py  query_evaluation_node.py  result_evaluator_node.py  retriever_node.py  web_search_node.py
Src/Config/: settings.py
Src/Embeddings/: embeddings.py
Src/Evaluaters/: Hellucination_Grader.py  QueryCorrector.py  QueryGrader.py
Src/Ingestion/: ingest.py
Src/Interfaces/: IDocumentLoader.py  IGraphStore.py  ILLMProvider.py  IVectorStore.py
Src/Providers/: FAISSVectorStore.py  GroqLLMProvider.py  Neo4jGraphStore.py  PyPDFDocumentLoader.py
Src/Router/: EmbeddingRouter.py  GraderRouter.py  SimilaritySearchRouter.py  UploadRouter.py  chatbotRouter.py
Src/Services/: ChatService.py  EmbeddingService.py  SearchService.py
Src/Tools/: internet_search_tool.py  wikipedia_tool.py
Src/Utils/: llm_utils.py
Tests/: conftest.py
Tests/Integration/: test_complete_flow.py  test_history_persistence.py  test_solid_refactor.py
Tests/Probes/: probe_groq.py  test_neo4j_connection.py
Tests/Unit/Agents/: test_chat_bot_node.py  test_intent_detector_node.py  test_retriever_node.py  (+1 more)
VectoreStore/: faiss_search.py
tmp/: debug_history.py
(+3 files in other folders)
